--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,53 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <%- include('./partials/head') %>
+  <%- include('./partials/header') %>
+</head>
 <body>
-    <%- include('common/header'); %>
-    <h1>Home Page</h1>
-    <img src="images/test.jpeg" alt="wtf" />
-  </body>
+  
+
+
+    <section class="hero">
+      <div class="main-content">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>Welcome to The Meal Planner!</h1>
+                    <p>Discover delicious recipes and plan your meals for the week.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-1233">
+                    <h3>Featured Meals</h3>
+                </div>
+            </div>
+            <div class="featured-meals">
+                <div class="meal-card">
+                    <h4>Arriba Baked Winter Squash</h4>
+                    <p>A delicious Mexican-style baked winter squash recipe that can be prepared either spicy or sweet, depending on your preference.</p>
+                </div>
+                <div class="meal-card">
+                    <h4>A Bit Different Breakfast Pizza</h4>
+                    <p>This breakfast pizza recipe features a unique combination of ingredients, such as sausage, eggs, and cheese, perfect for starting your day.</p>
+                </div>
+                <div class="meal-card">
+                    <h4>Chili</h4>
+                    <p>A classic chili recipe made with ground beef, beans, and a flavorful blend of spices, perfect for warming up on a cold day.</p>
+                </div>
+                <div class="meal-card">
+                    <h4>Beef Stroganoff</h4>
+                    <p>A creamy, savory beef stroganoff recipe made with tender pieces of beef, onions, and mushrooms, served over a bed of noodles.</p>
+                </div>
+            </div>
+          </div>
+        </div>
+    </section>
+
+    <%- include('./partials/footer') %>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybBq3kj2fX1W9CDv2M3RkZg6aib8iG8Ug6j2m7q0fI12tbLkk"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+</body>
+</html>
