--- a/views/meals.ejs
+++ b/views/meals.ejs
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%- include('./partials/header') %>
+    <%- include('./partials/head') %>
     <title>Meals</title>
+    <link rel="stylesheet" href="/css/meals.css">
 </head>
 <body>
     <h1>Meals</h1>
-    <ul>
-        <% meals.forEach((meal) => { %>
-            <li>
-                <h2><%= meal.name %></h2>
-                <p><%= meal.description %></p>
-            </li>
-        <% }); %>
-    </ul>
+    <form action="/search" method="get">
+        <input type="text" name="q" placeholder="Search meals...">
+        <button type="submit">Search</button>
+      </form>
+      <div class="container">
+        <ul>
+            <% meals.forEach((meal) => { %>
+                <li>
+                    <h2><%= meal.name %></h2>
+                    <p class="Description">Description: <br><%= meal.description %></p>
+                    <p class="Ingredients">Ingredients: <%= meal.ingredients %></p>
+                </li>
+            <% }); %>
+        </ul>
+    </div>
+
+
+    <%- include('./partials/footer') %>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybBq3kj2fX1W9CDv2M3RkZg6aib8iG8Ug6j2m7q0fI12tbLkk"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 </body>
+
 </html>
