--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/footer.css"/>
 <footer>
     <div class="container">
         <p class="text-center">&copy; 2023 Meal Planner. All rights reserved.</p>
