--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,10 @@
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Meal Planner</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5//SHzj1LV4/R4gYDcJtVpr19roAKdzPPe/Wtr9" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/header.css"/>
+<link rel="icon" href="/images/favicon.png" type="image/x-icon"/>
+
 <header>
     <div class="logo">
       <img src="/images/logo.png" alt="The-Meal-Planner-Logo">
@@ -5,9 +12,9 @@
     <div class="menu-links">
       <a class="nav-link" href="/">Home</a>
       <a class="nav-link" href="/meals">Meals</a>
-      <a class="nav-link" href="/meals">Reviews</a>
-      <a class="nav-link" href="/meals">About</a>
-      <a class="nav-link" href="/meals">Contact</a>
+      <a class="nav-link" href="/reviews">Reviews</a>
+      <a class="nav-link" href="/about">About</a>
+      <a class="nav-link" href="/contact">Contact</a>
       <a class="nav-link" href="/login">Login</a>
       <a class="nav-link" href="/register">Register</a>
     </div>
