--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,10 +37,9 @@
           </div>
         </div>
     </section>
-
     <%- include('./partials/footer') %>
-
-
+    <script src="js/client.js"></script>
+    <script src="js/interactions.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybBq3kj2fX1W9CDv2M3RkZg6aib8iG8Ug6j2m7q0fI12tbLkk"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 </body>
