--- a/views/meals.ejs
+++ b/views/meals.ejs
@@ -1,35 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('./partials/header') %>
-    <%- include('./partials/head') %>
+    <%- include('./partials/header') %>    
     <title>Meals</title>
     <link rel="stylesheet" href="/css/meals.css">
+    <link rel="stylesheet" href="/css/headers.css">
 </head>
 <body>
-    <h1>Meals</h1>
-    <form action="/search" method="get">
+    <div class="container">
+        <div class="hero">
+            <h1>Meals</h1>
+        </div>
+    
+    </div>
+    <div class="search">
+    <form action="/search" method="get" >
         <input type="text" name="q" placeholder="Search meals...">
         <button type="submit">Search</button>
+    </form>
+    <form>
+        <label for="ingredient">Base ingredient:</label>
+        <select id="ingredient" name="ingredient">
+          <option value="beef">Beef</option>
+          <option value="chicken">Chicken</option>
+          <option value="lamb">Lamb</option>
+          <option value="none">Vegeterian</option>
+        </select>
       </form>
-      <div class="container">
+      <form>
+        <label for="exclude">Exclude:</label>
+        <select id="exclude" name="exclude">
+          <option value="beef">Beef</option>
+          <option value="chicken">Chicken</option>
+          <option value="lamb">Lamb</option>
+          <option value="none">Vegeterian</option>
+        </select>
+      </form>
+</div>
+    <div class="container">
         <ul>
-            <% meals.forEach((meal) => { %>
+            <% meals.forEach((meal, index) => { %>
                 <li>
                     <h2><%= meal.name %></h2>
                     <p class="Description">Description: <br><%= meal.description %></p>
-                    <p class="Ingredients">Ingredients: <%= meal.ingredients %></p>
+                    <button data-index="<%- index %>" class="toggle-details-btn">Toggle Ingredients and Steps</button>
+                    <div class="details" id="details-<%= index %>" style="display: none;">
+                        <p class="Ingredients">Ingredients: <%= meal.ingredients %></p>
+                        <p class="Steps">Steps: <%= meal.steps %></p>
+                    </div>
                 </li>
             <% }); %>
         </ul>
     </div>
 
-
     <%- include('./partials/footer') %>
 
+  
+    <script src="/js/meals.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybBq3kj2fX1W9CDv2M3RkZg6aib8iG8Ug6j2m7q0fI12tbLkk"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 </body>
-
 </html>
