--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,14 +9,20 @@
     <div class="logo">
       <img src="/images/logo.png" alt="The-Meal-Planner-Logo">
     </div>
+    <div class="username"><% if (isLoggedIn) { %>
+      You are logged in as <%= user.full_name %>
+      <% } else {} %></div>
     <div class="menu-links">
       <a class="nav-link" href="/">Home</a>
       <a class="nav-link" href="/meals">Meals</a>
       <a class="nav-link" href="/reviews">Reviews</a>
       <a class="nav-link" href="/about">About</a>
       <a class="nav-link" href="/contact">Contact</a>
-      <a class="nav-link" href="/login">Login</a>
-      <a class="nav-link" href="/register">Register</a>
+      <% if (isLoggedIn) { %>
+      <a class="nav-link" href="/logout">Logout</a>
+      <% } else { %>
+      <a class="nav-link" href="/login">Login</a> 
+      <% } %>
     </div>
   </header>
   
