--- a/views/meals.ejs
+++ b/views/meals.ejs
@@ -13,29 +13,34 @@
         </div>
     
     </div>
-    <div class="search">
-    <form action="/search" method="get" >
+<div class="search">
+    <form action="/search" method="get">
         <input type="text" name="q" placeholder="Search meals...">
         <button type="submit">Search</button>
     </form>
-    <form>
-        <label for="ingredient">Base ingredient:</label>
-        <select id="ingredient" name="ingredient">
-          <option value="beef">Beef</option>
-          <option value="chicken">Chicken</option>
-          <option value="lamb">Lamb</option>
-          <option value="none">Vegeterian</option>
-        </select>
-      </form>
-      <form>
-        <label for="exclude">Exclude:</label>
-        <select id="exclude" name="exclude">
-          <option value="beef">Beef</option>
-          <option value="chicken">Chicken</option>
-          <option value="lamb">Lamb</option>
-          <option value="none">Vegeterian</option>
-        </select>
-      </form>
+    <div class="or-section">
+        <h2>OR</h2>
+    </div>
+    <form class="filter-form">
+        <div class="form-group">
+            <label for="ingredient">Base ingredient:</label>
+            <select id="ingredient" name="ingredient">
+              <option value="beef">Beef</option>
+              <option value="chicken">Chicken</option>
+              <option value="lamb">Lamb</option>
+              <option value="none">Vegeterian</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="exclude">Exclude:</label>
+            <select id="exclude" name="exclude">
+              <option value="beef">Beef</option>
+              <option value="chicken">Chicken</option>
+              <option value="lamb">Lamb</option>
+              <option value="none">Vegeterian</option>
+            </select>
+        </div>
+    </form>
 </div>
     <div class="container">
         <ul>
