--- a/views/meals.ejs
+++ b/views/meals.ejs
@@ -11,20 +11,19 @@
         <div class="hero">
             <h1>Meals</h1>
         </div>
-    
     </div>
 <div class="search">
-    <form action="/search" method="get">
-        <input type="text" name="q" placeholder="Search meals...">
-        <button type="submit">Search</button>
+    <form action="/search" method="get" class="search-bar">
+        <input type="search" name="q" placeholder="Search meals..." pattern=".*\S.*">
+        <button type="submit" class="search-button"><span>Search</span></button>
     </form>
     <div class="or-section">
         <h2>OR</h2>
     </div>
-    <form class="filter-form">
+    <form class="filter-form" action="/filter-search" method="get">
         <div class="form-group">
-            <label for="ingredient">Base ingredient:</label>
-            <select id="ingredient" name="ingredient">
+            <label for="ingredient">Include</label>
+            <select id="ingredient" name="ingredient" <%= !isLoggedIn ? 'disabled' : '' %>>
               <option value="beef">Beef</option>
               <option value="chicken">Chicken</option>
               <option value="lamb">Lamb</option>
@@ -32,32 +31,83 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="exclude">Exclude:</label>
-            <select id="exclude" name="exclude">
+            <label for="exclude">Exclude</label>
+            <select id="exclude" name="exclude" <%= !isLoggedIn ? 'disabled' : '' %>>
               <option value="beef">Beef</option>
               <option value="chicken">Chicken</option>
               <option value="lamb">Lamb</option>
               <option value="none">Vegeterian</option>
             </select>
         </div>
+        <button type="submit" class="search-button2" <%= !isLoggedIn ? 'disabled' : '' %>>Filter</button>
     </form>
-</div>
-    <div class="container">
-        <ul>
-            <% meals.forEach((meal, index) => { %>
-                <li>
-                    <h2><%= meal.name %></h2>
-                    <p class="Description">Description: <br><%= meal.description %></p>
-                    <button data-index="<%- index %>" class="toggle-details-btn">Toggle Ingredients and Steps</button>
-                    <div class="details" id="details-<%= index %>" style="display: none;">
-                        <p class="Ingredients">Ingredients: <%= meal.ingredients %></p>
-                        <p class="Steps">Steps: <%= meal.steps %></p>
-                    </div>
-                </li>
-            <% }); %>
-        </ul>
+    <div class="alert">
+        <% if (isLoggedIn) { %>
+         
+        <% } else { %>
+          Login to use these filters
+        <% } %>
+      </div>
     </div>
-
+    <div class="container box">
+    
+        <ul>
+            <% if (isFilterSearch) { %>
+                <!-- display filter search results -->
+                <% meals.forEach((meal, index) => { %>
+                    <li>
+                        <h2><%= meal.name %></h2>
+                        <p class="description"> <br><%= meal.description %><br></p>
+                        <button data-index="<%- index %>" class="toggle-ingredients-btn">Ingredients</button>
+                        <button data-index="<%- index %>" class="toggle-steps-btn">Steps</button>
+                        <div class="ingredients" id="ingredients-<%= index %>" style="display: none;">
+                            <p>Ingredients</p>
+                            <ul>
+                              <% meal.ingredients.split(',').slice(1, -1).forEach(ingredient => { %>
+                                <li>- <%= ingredient.trim().slice(1, -1) %></li>
+                              <% }); %>
+                            </ul>
+                        </div>
+                        <div class="steps" id="steps-<%= index %>" style="display: none;">
+                            <p>Preparation</p>
+                            <ol>
+                                <% meal.steps.split(',').slice(1, -1).forEach(steps => {  %>
+                                <li> <%= steps.trim().slice(1, -1) %></li>
+                              <% }); %>
+                            </ol>
+                        </div>
+                    </li>
+                <% }); %>                
+            <% } else { %>
+                <!-- display name search results -->
+                <% meals.forEach((meal, index) => { %>
+                    <li>
+                        <h2><%= meal.name %></h2>
+                        <p class="Description"> <br><%= meal.description %><br></p>
+                        <button data-index="<%- index %>" class="toggle-ingredients-btn">Ingredients</button>
+                        <button data-index="<%- index %>" class="toggle-steps-btn">Steps</button>
+                        <div class="ingredients" id="ingredients-<%= index %>" style="display: none;">
+                            <p>Ingredients</p>
+                            <ul>
+                              <% meal.ingredients.split(',').slice(1, -1).forEach(ingredient => { %>
+                                <li>- <%= ingredient.trim().slice(1, -1) %></li>
+                              <% }); %>
+                            </ul>
+                        </div>
+                        <div class="steps" id="steps-<%= index %>" style="display: none;">
+                            <p>Preparation</p>
+                            <ol>
+                                <% meal.steps.split(',').slice(1, -1).forEach(steps => {  %>
+                                <li> <%= steps.trim().slice(1, -1) %></li>
+                              <% }); %>
+                            </ol>
+                        </div>
+                    </li>
+                <% }); %>
+            <% } %>
+        </ul>
+    
+    </div>
     <%- include('./partials/footer') %>
 
   
