--- a/css/meals.css
+++ b/css/meals.css
@@ -138,7 +138,9 @@ body {
     margin: 0 auto;
     
   }
-
+  .meal-details{
+    text-align: center;
+  }
   
   /* CSS */
   .toggle-ingredients-btn, .toggle-steps-btn {
@@ -362,3 +364,164 @@ body {
 	}
 }
 
+/* Pagination */
+.pagination-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
+
+.pagination {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.pagination a {
+  color: black;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+}
+
+.pagination li {
+  display: inline-block;
+  margin-bottom: 8px;
+  margin: 0 5px;
+  text-align: center;
+}
+
+.pagination li.active a {
+  background-color: #007bffa1;
+  color: #fff;
+  border-radius: 15%;
+}
+
+.pagination a.active {
+  background-color: rgba(30, 143, 255, 0.651);
+  color: white;
+  border-radius: 15%;
+}
+
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+  border-radius: 15%;
+}
+
+.container-with-buttons {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  
+}
+
+.buttons-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-left: 10px;
+  vertical-align: middle;
+  margin-top: 25px;
+  
+}
+.meal-container{
+  width: 100%;
+}
+
+/* CSS */
+.update-button {
+  align-items: center;
+  background-color: #168affc0;
+  border: 0;
+  border-radius: 100px;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: -apple-system, system-ui, system-ui, "Segoe UI", Roboto, "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell, "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 20px;
+  max-width: 480px;
+  min-height: 40px;
+  min-width: 0px;
+  overflow: hidden;
+  padding: 0px;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  touch-action: manipulation;
+  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+}
+
+.update-button:hover,
+.update-button:focus { 
+  background-color: #16437E;
+  color: #ffffff;
+}
+
+.update-button:active {
+  background: #09223b;
+  color: rgb(255, 255, 255, .7);
+}
+
+.update-button:disabled { 
+  cursor: not-allowed;
+  background: rgba(0, 0, 0, .08);
+  color: rgba(0, 0, 0, .3);
+}
+
+.delete-button {
+  align-items: center;
+  background-color: #ee2525b2;
+  border: 0;
+  border-radius: 100px;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: -apple-system, system-ui, system-ui, "Segoe UI", Roboto, "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell, "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 20px;
+  max-width: 480px;
+  min-height: 40px;
+  min-width: 0px;
+  overflow: hidden;
+  padding: 0px;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  touch-action: manipulation;
+  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+}
+
+.delete-button:hover,
+.delete-button:focus { 
+  background-color: #f02525;
+  color: #ffffff;
+}
+
+.delete-button:active {
+  background: #3f0101;
+  color: rgb(255, 255, 255, .7);
+}
+
+.delete-button:disabled { 
+  cursor: not-allowed;
+  background: rgba(0, 0, 0, .08);
+  color: rgba(0, 0, 0, .3);
+}
