--- a/views/meals.ejs
+++ b/views/meals.ejs
@@ -98,7 +98,9 @@
                                     <div class="ingredients" id="ingredients-<%= index %>" style="display: none;">
                                         <p>Ingredients</p>
                                         <ul>
-                                          <% meal.ingredients.split(',').slice(1, -1).forEach(ingredient => { %>
+                                          <% 
+                                          let ingredientsArray = meal.ingredients.startsWith('[') ? meal.ingredients.slice(1, -1).split(',') : meal.ingredients.split(',');
+                                          ingredientsArray.forEach(ingredient => { %>
                                             <li>- <%= ingredient.trim().slice(1, -1) %></li>
                                           <% }); %>
                                         </ul>
@@ -106,8 +108,10 @@
                                     <div class="steps" id="steps-<%= index %>" style="display: none;">
                                         <p>Preparation</p>
                                         <ol>
-                                            <% meal.steps.split(',').slice(1, -1).forEach(steps => {  %>
-                                            <li> <%= steps.trim().slice(1, -1) %></li>
+                                            <% 
+                                            let stepsArray = meal.steps.startsWith('[') ? meal.steps.slice(1, -1).split(',') : meal.steps.split(',');
+                                            stepsArray.forEach(step => {  %>
+                                            <li> <%= step.trim().slice(1, -1) %></li>
                                           <% }); %>
                                         </ol>
                                     </div>
@@ -115,13 +119,14 @@
                             </div>
                             <% if (isLoggedIn) { %>
                                 <div class="buttons-container">
-                                    <button data-index="<%- index %>" class="update-button">Update</button>
+                                    <button data-index="<%- index %>" class="update-button" onclick="location.href='/update-meal/<%= meal._id %>?returnUrl=' + encodeURIComponent(window.location.href)">Update</button>
                                     <button data-index="<%- index %>" class="delete-button">Delete</button>
                                 </div>
                             <% } %>
                         </div>
                     </li>
                 <% }); %>
+                
                 <% } %>
                 
                 
