--- a/views/meals.ejs
+++ b/views/meals.ejs
@@ -21,35 +21,21 @@
     <div class="or-section">
         <h2>OR</h2>
     </div>
-    <form class="filter-form" action="/filter-search" method="get">
-        <div class="form-group">
-            <label for="ingredient">Include</label>
-            <select id="ingredient" name="ingredient" <%= !isLoggedIn ? 'disabled' : '' %>>
-              <option value="beef">Beef</option>
-              <option value="chicken">Chicken</option>
-              <option value="lamb">Lamb</option>
-              <option value="none">Vegeterian</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="exclude">Exclude</label>
-            <select id="exclude" name="exclude" <%= !isLoggedIn ? 'disabled' : '' %>>
-              <option value="beef">Beef</option>
-              <option value="chicken">Chicken</option>
-              <option value="lamb">Lamb</option>
-              <option value="none">None</option>
-            </select>
-        </div>
-        <button type="submit" class="search-button2" <%= !isLoggedIn ? 'disabled' : '' %>>Filter</button>
-    </form>
-    <div class="alert">
+
+    <div class="create-meal">
         <% if (isLoggedIn) { %>
-         
-        <% } else { %>
-          Login to use these filters
+            <button id="create-meal-button">
+                <span>Create New Meal</span>
+                <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
+                  <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
+                </svg>
+              </button>
+        <% } else {%>
+            <h3>Login and you can create a new meal / modify a current one!</h3>
         <% } %>
-      </div>
     </div>
+    </div>
+    
     <div class="container box">
     
         <ul>
