--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/footer.css"/>
 <footer>
     <div class="container">
-        <p class="text-center">&copy; 2023 Meal Planner. All rights reserved.</p>
+        <p class="text-center">&copy; 2023 Meal Planner. Created by Richard Adler.</p>
     </div>
 </footer>
