--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,23 @@ body {
     
   }
   
+  .row1, .row2, .row3{
+    text-align: center;
+    margin: 50px;
+  }
+  .div1, .div2, .div3{
+    text-align: center;
+    margin: 50px;
+  }
+  .div1 ul{
+    list-style-type: none;
+  }
 
+  
+  .h2{
+    font-weight: 800;
+    font-size: larger;
+  }
   .col-md-12{
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.781), rgba(92, 92, 92, 0.342)),url(https://media-cldnry.s-nbcnews.com/image/upload/rockcms/2022-03/plant-based-food-mc-220323-02-273c7b.jpg) rgba(0, 0, 0, 0.479);
     height: 70vh;
@@ -44,9 +60,9 @@ body {
     text-shadow: 2px 1px #000000a8;
     font-size: 19px;
   }
-  .col-md-1233 h3{
+  .col-md-1233 h2{
     text-align: center;
-    font-size: 30px;
+    font-size: 50px;
 
   }
 
